--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,17 @@
                 <version>0.11.2</version>
                 <scope>runtime</scope>
             </dependency>
+            <dependency>
+                    <groupId>commons-fileupload</groupId>
+                    <artifactId>commons-fileupload</artifactId>
+                    <version>1.4</version>
+            </dependency>
 
+            <dependency>
+                    <groupId>commons-io</groupId>
+                    <artifactId>commons-io</artifactId>
+                    <version>2.11.0</version>
+            </dependency>
             <!-- For Java 8 Date/Time Support -->
             <dependency>
                 <groupId>com.fasterxml.jackson.datatype</groupId>
