auto create file uploads
auto membuat file uploads in other your db place , so  no worry be happy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.compression.enabled=true
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url= jdbc:postgresql://localhost:5432/db_ternaksapi
 spring.datasource.username= postgres
-spring.datasource.password= admin
+spring.datasource.password= senja007
 
 
 ## Hibernate Properties
@@ -53,4 +53,5 @@ spring.servlet.multipart.max-request-size=215MB
 
 ## File Storage Properties
 # All files uploaded through the REST API will be stored in this directory
-file.upload-dir=E:/Myfile/Magang Maching Fund/img
+file.upload-dir=${user.dir}/uploads
+
